ingress/message-p9-deliver-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /message-deliver/$1
  name: message-p9-deliver-api
  namespace: gfactor
spec:
  ingressClassName: nginx
  rules:
  - host: sms.gfactor.apps.ocp-sit.test
    http:
      paths:
      - backend:
          service:
            name: message-p9-deliver
            port:
              number: 80
        path: /p9-deliver/(.*)
        pathType: Prefix
